--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
 plotly
-pandas==1.5.3
-numpy==1.23.5
+pandas>=2.2.0
+numpy>=1.26.0
 duckdb
-scikit-learn==1.1.3
+scikit-learn>=1.3.0
 joblib
 setuptools==58.0.4
 statsmodels
+
